2008-01-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Point to the right Bugzilla product for
	libgweather.
	http://mail.gnome.org/archives/gnome-i18n/2008-January/msg00126.html
	* releases.xml.in: ekiga will still deliver 2.20 branch for 2.22.
	http://mail.gnome.org/archives/gnome-i18n/2008-January/msg00123.html

2008-01-12  Claude Paroz  <claude@2xlibre.net>

	* templates/show-stats.tmpl: Compute more precisely the link to figure
	status, to prevent some problems with ending slash.

2008-01-12  Claude Paroz  <claude@2xlibre.net>

	* data/figure.png: New icon proposed by Djihed Afifi (Tango's
	preferences-system-windows.png).

2008-01-12  Claude Paroz  <claude@2xlibre.net>

	* module.py: Get the number of figures in a document.
	* templates/module-images.tmpl: Properly i18n-ized.
	* templates/show-stats.tmpl: Add figure count and figure column in
	stats where appropriate.
	Fixes #394862.

1008-01-12  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/person-base.tmpl:
	Remove the "maintains" part of "maintains $foo" and makes Translates be h2
	as Maintains section.

2008-01-12  Claude Paroz  <claude@2xlibre.net>

	* modules.py: Handle 'subpath' property, if available.
	* gnome-modules.xml.in:
	* releases.xml.in: Use new 'subpath' property for Release Notes, and
	split module. Fixes #508116.

2008-01-12  Claude Paroz  <claude@2xlibre.net>

	* modules.py:
	* update-stats.py: Escaped paths in system commands.
	Fixes #475599.

2008-01-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-nettool branched for 2.20.
	gdl and gnome-build moved to devel tools.

2008-01-11  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: po-locations is now in libgweather.

2008-01-10  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Updated kn and bn_IN coordinator ID.

2008-01-09  Gil Forcada  <gforcada@svn.gnome.org>

	* releases.xml.in: