@@ -52,6 +52,7 @@
     <name>Eitan Isaacson </name>
     <email>eitan@ascender.com</email>
     <webpage>http://monotonous.org</webpage>
+    <icon>http://planet.gnome.org/heads/eeejay.png</icon>
   </person>
   <person id="herzi">
     <name>Sven Herzberg</name>
@@ -126,6 +127,7 @@
     <email>svu@gnome.org</email>
     <nick>svu</nick>
     <webpage>http://www.advogato.org/person/svu/</webpage>
+    <icon>http://planet.gnome.org/heads/svu.png</icon>
   </person>
   <person id="veillard">
     <name>Daniel Veillard </name>
@@ -234,6 +236,7 @@
   <person id="sayamindu">
     <name>Sayamindu Dasgupta</name>
     <email>sayamindu@gmail.com</email>
+    <icon>http://planet.gnome.org/heads/sayamindu.png</icon>
   </person>
   <!-- bs translation coordinator -->
   <person id="aakagic">
@@ -269,6 +272,7 @@
   <person id="hadess">
     <name>Bastien Nocera</name>
     <email>hadess@hadess.net</email>
+    <icon>http://planet.gnome.org/heads/hadess.png</icon>
   </person>
   <!-- en_CA translation coordinator -->
   <person id="adamw">
@@ -279,6 +283,7 @@
   <person id="jordim">
     <name>Jordi Mallach</name>
     <email>jordi@sindominio.net</email>
+    <icon>http://planet.gnome.org/heads/oskuro.png</icon>
   </person>
   <!-- zh_CN translation coordinator -->
   <person id="x-wangjian">
@@ -635,6 +640,7 @@
   <person id="kmaraas">
     <name>Kjartan Maraas</name>
     <email>kmaraas@broadpark.no</email>
+    <icon>http://planet.gnome.org/heads/kmaraas.png</icon>
   </person>
   <!-- oc translation coordinator -->
   <person id="ymarcheg">
