@@ -1,3 +1,7 @@
+2008-01-14  Gil Forcada  <gforcada@gnome.org>
+
+	* people.xml.in: Added a few faces.
+
 2008-01-13  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in: Point to the right Bugzilla product for
